--- a/package.json
+++ b/package.json
@@ -1,22 +1,44 @@
 {
   "name": "bookings-frontend",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "dev-backend": "json-server --watch db.json --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/icons": "^4.11.2",
+    "apollo-client": "^2.6.10",
+    "apollo-datasource": "^3.1.0",
+    "apollo-datasource-rest": "^3.2.0",
+    "apollo-server-core": "^3.3.0",
+    "apollo-server-micro": "^3.3.0",
+    "graphql": "^15.5.1",
+    "graphql-tag": "^2.12.5",
+    "micro": "^9.3.4",
     "next": "11.1.0",
+    "nexus": "^1.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-error-boundary": "^3.1.3",
+    "react-hook-form": "^7.14.0"
   },
   "devDependencies": {
-    "@types/react": "17.0.19",
+    "@babel/core": "^7.15.0",
+    "@testing-library/dom": "^8.2.0",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/react": "^12.0.0",
+    "@testing-library/user-event": "^13.2.1",
+    "@types/jest": "^27.0.1",
+    "@types/node": "^16.7.5",
+    "@types/react": "^17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
+    "json-server": "^0.16.3",
     "typescript": "4.4.2"
   }
 }
