--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.10",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
     "apollo-client": "^2.6.10",
     "apollo-datasource": "^3.1.0",
     "apollo-datasource-rest": "^3.2.0",
