--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "dev-backend": "json-server --watch db.json --port 3001",
+    "dev-backend": "json-server --watch backend.json --port 3001",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
