fixed graphql configuration schema path
Signed-off-by: Jonah Grimes <jgrimes@appriss.com>

--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,6 +1,6 @@
 {
   "name": "Bookings GraphQL Schema",
-  "schemaPath": "generated/nexus/bookings-schema.graphql",
+  "schemaPath": "generated/nexus/bookings-schema.gql",
   "extensions": {
     "endpoints": {
       "Default GraphQL Endpoint": {
