--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apollo-server-micro": "^3.3.0",
     "graphql": "^15.5.1",
     "graphql-tag": "^2.12.5",
+    "luxon": "^2.0.2",
     "micro": "^9.3.4",
     "next": "11.1.1",
     "nexus": "^1.1.0",
@@ -34,6 +35,7 @@
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
+    "@types/luxon": "^2.0.4",
     "@types/node": "^16.7.5",
     "@types/react": "^17.0.19",
     "eslint": "7.32.0",
