--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev-backend": "json-server --watch backend.json --port 3001",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch",
+    "test:ci": "jest --ci"
   },
   "dependencies": {
     "@apollo/client": "^3.4.10",
@@ -40,6 +42,7 @@
     "@types/react": "^17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
+    "jest": "^27.2.1",
     "json-server": "^0.16.3",
     "typescript": "4.4.2"
   }
