added react-hooks testing library
Signed-off-by: Jonah Grimes <jgrimes@appriss.com>

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nexus": "^1.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-error-boundary": "^3.1.3",
     "react-hook-form": "^7.14.0"
   },
   "devDependencies": {
@@ -35,11 +36,13 @@
     "@testing-library/dom": "^8.2.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
     "@types/luxon": "^2.0.4",
     "@types/node": "^16.7.5",
-    "@types/react": "^17.0.19",
+    "@types/react": "^17.0.24",
+    "@types/react-dom": "^17.0.9",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
     "jest": "^27.2.1",
