--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
     "version": "1.0.0",
     "private": true,
     "scripts": {
-        "build": "next build",
-        "build-storybook": "build-storybook",
-        "dev": "next dev",
+        "app:build": "next build",
+        "app:dev": "next dev",
+        "app:dev-backend": "json-server --watch backend.json --port 3001",
+        "app:start": "next start",
+        "app:test": "jest --watch",
+        "app:test-ci": "jest --ci",
         "fmt": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
         "lint": "next lint",
-        "start": "next start",
-        "start-storybook": "start-storybook -p 6006",
-        "test": "jest --watch",
-        "test:ci": "jest --ci",
-        "test-storybook": "test-storybook"
+        "storybook:build": "build-storybook",
+        "storybook:start": "start-storybook -p 6006",
+        "storybook:test": "test-storybook"
     },
     "dependencies": {
         "@apollo/client": "^3.7.1",
@@ -78,6 +79,7 @@
         "jest": "^29.2.2",
         "jest-environment-jsdom": "^29.2.2",
         "jest-when": "^3.5.2",
+        "json-server": "^0.17.1",
         "prettier": "^2.7.1",
         "storybook": "^6.5.13",
         "ts-jest": "^29.0.3",
