--- a/package.json
+++ b/package.json
@@ -21,69 +21,67 @@
         "storybook:test": "test-storybook"
     },
     "dependencies": {
-        "@apollo/client": "^3.7.1",
+        "@apollo/client": "^3.7.7",
+        "@apollo/datasource-rest": "^5.0.2",
+        "@apollo/server": "^4.3.3",
+        "@as-integrations/next": "^1.2.0",
         "@popperjs/core": "^2.11.6",
-        "apollo-datasource": "^3.3.2",
-        "apollo-datasource-rest": "^3.7.0",
-        "apollo-server-core": "^3.11.1",
-        "apollo-server-micro": "^3.11.1",
-        "bootstrap": "^5.2.2",
-        "bootstrap-icons": "^1.9.1",
+        "bootstrap": "^5.2.3",
+        "bootstrap-icons": "^1.10.3",
         "graphql": "^16.6.0",
         "graphql-tag": "^2.12.6",
-        "launchdarkly-js-client-sdk": "^2.24.2",
-        "launchdarkly-node-server-sdk": "^6.4.3",
-        "launchdarkly-react-client-sdk": "^2.29.2",
-        "luxon": "^3.1.0",
-        "micro": "^9.4.1",
+        "launchdarkly-js-client-sdk": "^3.1.0",
+        "launchdarkly-node-server-sdk": "^7.0.1",
+        "launchdarkly-react-client-sdk": "^3.0.1",
+        "luxon": "^3.2.1",
         "next": "13.0.2",
         "nexus": "^1.3.0",
-        "react": "18.2.0",
-        "react-bootstrap": "^2.5.0",
-        "react-bootstrap-icons": "^1.9.1",
-        "react-dom": "18.2.0",
+        "react": "^18.2.0",
+        "react-bootstrap": "^2.7.0",
+        "react-bootstrap-icons": "^1.10.2",
+        "react-dom": "^18.2.0",
         "react-hook-form": "^7.39.1",
         "react-overlays": "^5.2.1",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.20.2",
-        "@storybook/addon-actions": "^6.5.13",
-        "@storybook/addon-essentials": "^6.5.13",
-        "@storybook/addon-interactions": "^6.5.13",
-        "@storybook/addon-links": "^6.5.13",
-        "@storybook/builder-webpack5": "^6.5.13",
-        "@storybook/manager-webpack5": "^6.5.13",
-        "@storybook/react": "^6.5.13",
+        "@babel/core": "^7.20.12",
+        "@storybook/addon-actions": "^6.5.16",
+        "@storybook/addon-essentials": "^6.5.16",
+        "@storybook/addon-interactions": "^6.5.16",
+        "@storybook/addon-links": "^6.5.16",
+        "@storybook/builder-webpack5": "^6.5.16",
+        "@storybook/manager-webpack5": "^6.5.16",
+        "@storybook/react": "^6.5.16",
         "@storybook/testing-library": "^0.0.13",
-        "@testing-library/dom": "^8.19.0",
+        "@testing-library/dom": "^8.20.0",
         "@testing-library/jest-dom": "^5.16.5",
         "@testing-library/react": "^13.4.0",
         "@testing-library/user-event": "^14.4.3",
-        "@types/jest": "^29.2.2",
+        "@types/jest": "^29.4.0",
         "@types/jest-when": "^3.5.2",
-        "@types/luxon": "^3.0.3",
-        "@types/node": "18.11.9",
-        "@types/react": "18.0.25",
-        "@types/react-dom": "18.0.8",
-        "@types/uuid": "^8.3.4",
-        "@typescript-eslint/eslint-plugin": "^5.42.0",
-        "@typescript-eslint/parser": "^5.42.0",
-        "babel-loader": "^8.3.0",
-        "eslint": "8.26.0",
-        "eslint-config-next": "13.0.2",
-        "eslint-config-prettier": "^8.5.0",
-        "eslint-plugin-import": "^2.26.0",
+        "@types/luxon": "^3.2.0",
+        "@types/node": "^18.13.0",
+        "@types/react": "^18.0.27",
+        "@types/react-dom": "^18.0.10",
+        "@types/uuid": "^9.0.0",
+        "@typescript-eslint/eslint-plugin": "^5.51.0",
+        "@typescript-eslint/parser": "^5.51.0",
+        "babel-loader": "^9.1.2",
+        "eslint": "^8.33.0",
+        "eslint-config-next": "^13.1.6",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-import": "^2.27.5",
         "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-storybook": "^0.6.7",
-        "jest": "^29.2.2",
-        "jest-environment-jsdom": "^29.2.2",
+        "eslint-plugin-storybook": "^0.6.10",
+        "jest": "^29.4.2",
+        "jest-environment-jsdom": "^29.4.2",
         "jest-when": "^3.5.2",
         "json-server": "^0.17.1",
-        "prettier": "^2.7.1",
-        "storybook": "^6.5.13",
-        "ts-jest": "^29.0.3",
+        "prettier": "^2.8.4",
+        "storybook": "^6.5.16",
+        "ts-jest": "^29.0.5",
         "tsconfig-paths-webpack-plugin": "^4.0.0",
-        "typescript": "4.8.4"
+        "typescript": "^4.9.5"
     }
 }
