--- a/package.json
+++ b/package.json
@@ -1,87 +1,86 @@
 {
-    "name": "bookings-frontend",
-    "author": {
-        "name": "Jonah Grimes",
-        "username": "jmgrimes",
-        "url": "https://github.com/jmgrimes"
-    },
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "app:build": "next build",
-        "app:dev": "next dev",
-        "app:dev-backend": "json-server --watch backend.json --port 3001",
-        "app:start": "next start",
-        "app:test": "jest --watch",
-        "app:test-ci": "jest --ci",
-        "fmt": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-        "lint": "next lint",
-        "storybook:build": "build-storybook",
-        "storybook:start": "start-storybook -p 6006",
-        "storybook:test": "test-storybook"
-    },
-    "dependencies": {
-        "@apollo/client": "^3.7.7",
-        "@apollo/datasource-rest": "^5.0.2",
-        "@apollo/server": "^4.3.3",
-        "@as-integrations/next": "^1.2.0",
-        "@popperjs/core": "^2.11.6",
-        "bootstrap": "^5.2.3",
-        "bootstrap-icons": "^1.10.3",
-        "graphql": "^16.6.0",
-        "graphql-tag": "^2.12.6",
-        "launchdarkly-js-client-sdk": "^3.1.0",
-        "launchdarkly-node-server-sdk": "^7.0.1",
-        "launchdarkly-react-client-sdk": "^3.0.1",
-        "luxon": "^3.2.1",
-        "next": "13.0.2",
-        "nexus": "^1.3.0",
-        "react": "^18.2.0",
-        "react-bootstrap": "^2.7.0",
-        "react-bootstrap-icons": "^1.10.2",
-        "react-dom": "^18.2.0",
-        "react-hook-form": "^7.39.1",
-        "react-overlays": "^5.2.1",
-        "uuid": "^9.0.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.20.12",
-        "@storybook/addon-actions": "^6.5.16",
-        "@storybook/addon-essentials": "^6.5.16",
-        "@storybook/addon-interactions": "^6.5.16",
-        "@storybook/addon-links": "^6.5.16",
-        "@storybook/builder-webpack5": "^6.5.16",
-        "@storybook/manager-webpack5": "^6.5.16",
-        "@storybook/react": "^6.5.16",
-        "@storybook/testing-library": "^0.0.13",
-        "@testing-library/dom": "^8.20.0",
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^13.4.0",
-        "@testing-library/user-event": "^14.4.3",
-        "@types/jest": "^29.4.0",
-        "@types/jest-when": "^3.5.2",
-        "@types/luxon": "^3.2.0",
-        "@types/node": "^18.13.0",
-        "@types/react": "^18.0.27",
-        "@types/react-dom": "^18.0.10",
-        "@types/uuid": "^9.0.0",
-        "@typescript-eslint/eslint-plugin": "^5.51.0",
-        "@typescript-eslint/parser": "^5.51.0",
-        "babel-loader": "^9.1.2",
-        "eslint": "^8.33.0",
-        "eslint-config-next": "^13.1.6",
-        "eslint-config-prettier": "^8.6.0",
-        "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-storybook": "^0.6.11",
-        "jest": "^29.4.2",
-        "jest-environment-jsdom": "^29.4.2",
-        "jest-when": "^3.5.2",
-        "json-server": "^0.17.1",
-        "prettier": "^2.8.4",
-        "storybook": "^6.5.16",
-        "ts-jest": "^29.0.5",
-        "tsconfig-paths-webpack-plugin": "^4.0.0",
-        "typescript": "^4.9.5"
-    }
+  "name": "bookings-frontend",
+  "author": {
+    "name": "Jonah Grimes",
+    "username": "jmgrimes",
+    "url": "https://github.com/jmgrimes"
+  },
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "app:build": "next build",
+    "app:dev": "next dev",
+    "app:dev-backend": "json-server --watch backend.json --port 3001",
+    "app:start": "next start",
+    "app:test": "jest --watch",
+    "app:test-ci": "jest --ci",
+    "fmt": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
+    "lint": "next lint",
+    "storybook:build": "storybook build",
+    "storybook:start": "storybook dev -p 6006",
+    "storybook:test": "test-storybook"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.7.14",
+    "@apollo/datasource-rest": "^6.0.0",
+    "@apollo/server": "^4.7.1",
+    "@as-integrations/next": "^1.2.0",
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.3",
+    "bootstrap-icons": "^1.10.5",
+    "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
+    "launchdarkly-js-client-sdk": "^3.1.0",
+    "launchdarkly-node-server-sdk": "^7.0.1",
+    "launchdarkly-react-client-sdk": "^3.0.1",
+    "luxon": "^3.2.1",
+    "next": "13.4.1",
+    "nexus": "^1.3.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-bootstrap-icons": "^1.10.3",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.39.1",
+    "react-overlays": "^5.2.1",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.12",
+    "@storybook/addon-actions": "^7.0.18",
+    "@storybook/addon-essentials": "^7.0.18",
+    "@storybook/addon-interactions": "^7.0.18",
+    "@storybook/addon-links": "^7.0.18",
+    "@storybook/blocks": "^7.0.18",
+    "@storybook/nextjs": "^7.0.18",
+    "@storybook/react": "^7.0.18",
+    "@testing-library/dom": "^8.20.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.4.0",
+    "@types/jest-when": "^3.5.2",
+    "@types/luxon": "^3.2.0",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "babel-loader": "^9.1.2",
+    "eslint": "^8.33.0",
+    "eslint-config-next": "^13.1.6",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-storybook": "^0.6.12",
+    "jest": "^29.4.2",
+    "jest-environment-jsdom": "^29.4.2",
+    "jest-when": "^3.5.2",
+    "json-server": "^0.17.1",
+    "prettier": "^2.8.4",
+    "storybook": "^7.0.18",
+    "ts-jest": "^29.0.5",
+    "typescript": "^4.9.5",
+    "webpack": "^5.82.1"
+  }
 }
