--- a/package.json
+++ b/package.json
@@ -53,16 +53,16 @@
     "@storybook/blocks": "^7.0.18",
     "@storybook/nextjs": "^7.0.18",
     "@storybook/react": "^7.0.18",
-    "@testing-library/dom": "^8.20.0",
+    "@testing-library/dom": "^9.3.0",
     "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.4.0",
+    "@types/jest": "^29.5.0",
     "@types/jest-when": "^3.5.2",
-    "@types/luxon": "^3.2.0",
-    "@types/node": "^18.13.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@types/luxon": "^3.3.0",
+    "@types/node": "^18.16.16",
+    "@types/react": "^18.2.8",
+    "@types/react-dom": "^18.2.4",
     "@types/uuid": "^9.0.0",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
@@ -74,13 +74,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-storybook": "^0.6.12",
     "jest": "^29.4.2",
-    "jest-environment-jsdom": "^29.4.2",
+    "jest-environment-jsdom": "^29.5.0",
     "jest-when": "^3.5.2",
     "json-server": "^0.17.1",
     "prettier": "^2.8.4",
     "storybook": "^7.0.18",
-    "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5",
+    "ts-jest": "^29.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3",
     "webpack": "^5.82.1"
   }
 }
