--- a/package.json
+++ b/package.json
@@ -28,20 +28,19 @@
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
+    "class-validator": "^0.14.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
-    "launchdarkly-js-client-sdk": "^3.1.0",
-    "launchdarkly-node-server-sdk": "^7.0.1",
-    "launchdarkly-react-client-sdk": "^3.0.1",
     "luxon": "^3.2.1",
-    "next": "13.4.1",
-    "nexus": "^1.3.0",
+    "next": "13.4.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.39.1",
     "react-overlays": "^5.2.1",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^2.0.0-beta.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -68,7 +67,7 @@
     "@typescript-eslint/parser": "^5.51.0",
     "babel-loader": "^9.1.2",
     "eslint": "^8.33.0",
-    "eslint-config-next": "^13.1.6",
+    "eslint-config-next": "^13.4.7",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
