--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,9 @@
         "allowJs": true,
         "baseUrl": ".",
         "downlevelIteration": true,
+        "emitDecoratorMetadata": true,
         "esModuleInterop": true,
+        "experimentalDecorators": true,
         "forceConsistentCasingInFileNames": true,
         "incremental": true,
         "isolatedModules": true,
@@ -17,7 +19,7 @@
         "moduleResolution": "node",
         "noEmit": true,
         "paths": {
-            "~*": [
+            "~/*": [
                 "./src/*",
             ],
         },
