--- a/package.json
+++ b/package.json
@@ -1,86 +1,86 @@
 {
-  "name": "bookings-frontend",
-  "author": {
-    "name": "Jonah Grimes",
-    "username": "jmgrimes",
-    "url": "https://github.com/jmgrimes"
-  },
-  "version": "1.0.0",
-  "private": true,
-  "scripts": {
-    "app:build": "next build",
-    "app:dev": "next dev",
-    "app:dev-backend": "json-server --watch backend.json --port 3001",
-    "app:start": "next start",
-    "app:test": "jest --watch",
-    "app:test-ci": "jest --ci",
-    "format": "prettier --write \"src/**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
-    "lint": "next lint",
-    "storybook:build": "storybook build",
-    "storybook:start": "storybook dev -p 6006",
-    "storybook:test": "test-storybook"
-  },
-  "dependencies": {
-    "@apollo/client": "^3.7.14",
-    "@apollo/datasource-rest": "^6.0.0",
-    "@apollo/server": "^4.7.1",
-    "@as-integrations/next": "^1.2.0",
-    "@popperjs/core": "^2.11.6",
-    "bootstrap": "^5.2.3",
-    "bootstrap-icons": "^1.10.5",
-    "class-validator": "^0.14.0",
-    "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6",
-    "luxon": "^3.2.1",
-    "next": "13.4.7",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.7.4",
-    "react-bootstrap-icons": "^1.10.3",
-    "react-dom": "^18.2.0",
-    "react-hook-form": "^7.39.1",
-    "react-overlays": "^5.2.1",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "^2.0.0-beta.2",
-    "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@storybook/addon-actions": "^7.0.18",
-    "@storybook/addon-essentials": "^7.0.18",
-    "@storybook/addon-interactions": "^7.0.18",
-    "@storybook/addon-links": "^7.0.18",
-    "@storybook/blocks": "^7.0.18",
-    "@storybook/nextjs": "^7.0.18",
-    "@storybook/react": "^7.0.18",
-    "@testing-library/dom": "^9.3.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/jest": "^29.5.0",
-    "@types/jest-when": "^3.5.2",
-    "@types/luxon": "^3.3.0",
-    "@types/node": "^18.16.16",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.4",
-    "@types/uuid": "^9.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.51.0",
-    "@typescript-eslint/parser": "^5.51.0",
-    "babel-loader": "^9.1.2",
-    "eslint": "^8.33.0",
-    "eslint-config-next": "^13.4.7",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-storybook": "^0.6.12",
-    "jest": "^29.4.2",
-    "jest-environment-jsdom": "^29.5.0",
-    "jest-when": "^3.5.2",
-    "json-server": "^0.17.1",
-    "prettier": "^2.8.4",
-    "storybook": "^7.0.18",
-    "ts-jest": "^29.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3",
-    "webpack": "^5.82.1"
-  }
+    "name": "bookings-frontend",
+    "author": {
+        "name": "Jonah Grimes",
+        "username": "jmgrimes",
+        "url": "https://github.com/jmgrimes"
+    },
+    "version": "1.0.0",
+    "private": true,
+    "scripts": {
+        "build": "next build",
+        "build-storybook": "storybook build",
+        "dev": "next dev",
+        "dev-backend": "json-server --watch backend.json --port 3001",
+        "format": "prettier \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
+        "format:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
+        "lint": "next lint",
+        "lint:fix": "next lint --fix",
+        "start": "next start",
+        "start-storybook": "storybook dev -p 6006",
+        "test": "jest",
+        "test:watch": "jest --watch"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.7.16",
+        "@apollo/datasource-rest": "^6.0.1",
+        "@apollo/server": "^4.7.5",
+        "@as-integrations/next": "^2.0.1",
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "^5.3.0",
+        "class-validator": "^0.14.0",
+        "graphql": "^16.7.1",
+        "graphql-tag": "^2.12.6",
+        "luxon": "^3.2.1",
+        "next": "13.4.7",
+        "react": "^18.2.0",
+        "react-bootstrap": "^2.8.0",
+        "react-bootstrap-icons": "^1.10.3",
+        "react-dom": "^18.2.0",
+        "react-hook-form": "^7.45.1",
+        "react-overlays": "^5.2.1",
+        "reflect-metadata": "^0.1.13",
+        "type-graphql": "^2.0.0-beta.2",
+        "uuid": "^9.0.0"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.22.5",
+        "@storybook/addon-actions": "^7.0.24",
+        "@storybook/addon-essentials": "^7.0.24",
+        "@storybook/addon-interactions": "^7.0.24",
+        "@storybook/addon-links": "^7.0.24",
+        "@storybook/blocks": "^7.0.24",
+        "@storybook/nextjs": "^7.0.24",
+        "@storybook/react": "^7.0.24",
+        "@testing-library/dom": "^9.3.1",
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^14.0.0",
+        "@testing-library/user-event": "^14.4.3",
+        "@types/jest": "^29.5.0",
+        "@types/jest-when": "^3.5.2",
+        "@types/luxon": "^3.3.0",
+        "@types/node": "^20.3.2",
+        "@types/react": "^18.2.14",
+        "@types/react-dom": "^18.2.6",
+        "@types/uuid": "^9.0.2",
+        "@typescript-eslint/eslint-plugin": "^5.60.1",
+        "@typescript-eslint/parser": "^5.60.1",
+        "babel-loader": "^9.1.2",
+        "eslint": "^8.43.0",
+        "eslint-config-next": "^13.4.7",
+        "eslint-config-prettier": "^8.8.0",
+        "eslint-plugin-import": "^2.27.5",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-storybook": "^0.6.12",
+        "jest": "^29.5.0",
+        "jest-environment-jsdom": "^29.5.0",
+        "jest-when": "^3.5.2",
+        "json-server": "^0.17.3",
+        "prettier": "^2.8.8",
+        "storybook": "^7.0.24",
+        "ts-jest": "^29.1.0",
+        "ts-node": "^10.9.1",
+        "typescript": "^5.1.6",
+        "webpack": "^5.88.1"
+    }
 }
