--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,36 +10,23 @@
         "incremental": true,
         "isolatedModules": true,
         "jsx": "preserve",
-        "lib": [
-            "dom",
-            "dom.iterable",
-            "esnext",
-        ],
+        "lib": ["dom", "dom.iterable", "esnext"],
         "module": "esnext",
         "moduleResolution": "node",
         "noEmit": true,
         "paths": {
-            "~/*": [
-                "./src/*",
-            ],
+            "~/*": ["./src/*"]
         },
         "plugins": [
             {
-                "name": "next",
-            },
+                "name": "next"
+            }
         ],
         "resolveJsonModule": true,
         "skipLibCheck": true,
         "strict": true,
-        "target": "es5",
+        "target": "es5"
     },
-    "exclude": [
-        "node_modules",
-    ],
-    "include": [
-        "next-env.d.ts",
-        "**/*.ts",
-        "**/*.tsx",
-        ".next/types/**/*.ts",
-    ],
+    "exclude": ["node_modules"],
+    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"]
 }
