--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
         "build-storybook": "storybook build",
         "dev": "next dev",
         "dev-backend": "json-server --watch backend.json --port 3001",
-        "format": "prettier \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
-        "format:fix": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
+        "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
         "lint": "next lint",
-        "lint:fix": "next lint --fix",
         "start": "next start",
         "start-storybook": "storybook dev -p 6006",
         "test": "jest",
@@ -23,14 +21,12 @@
     },
     "dependencies": {
         "@apollo/client": "^3.7.16",
-        "@apollo/datasource-rest": "^6.0.1",
-        "@apollo/server": "^4.7.5",
-        "@as-integrations/next": "^2.0.1",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.0",
         "class-validator": "^0.14.0",
         "graphql": "^16.7.1",
         "graphql-tag": "^2.12.6",
+        "graphql-yoga": "^4.0.3",
         "luxon": "^3.2.1",
         "next": "13.4.7",
         "react": "^18.2.0",
