--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     },
     "dependencies": {
         "@apollo/client": "^3.7.16",
+        "@fortawesome/fontawesome-svg-core": "^6.4.2",
+        "@fortawesome/free-regular-svg-icons": "^6.4.2",
+        "@fortawesome/free-solid-svg-icons": "^6.4.2",
+        "@fortawesome/react-fontawesome": "^0.2.0",
         "@popperjs/core": "^2.11.8",
         "bootstrap": "^5.3.0",
         "class-validator": "^0.14.0",
@@ -30,8 +34,6 @@
         "luxon": "^3.2.1",
         "next": "13.4.7",
         "react": "^18.2.0",
-        "react-bootstrap": "^2.8.0",
-        "react-bootstrap-icons": "^1.10.3",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.45.1",
         "react-overlays": "^5.2.1",
