--- a/package.json
+++ b/package.json
@@ -26,23 +26,22 @@
         "@fortawesome/free-solid-svg-icons": "^6.4.2",
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.0",
+        "bootstrap": "^5.3.1",
         "class-validator": "^0.14.0",
-        "graphql": "^16.7.1",
+        "graphql": "^16.8.0",
         "graphql-tag": "^2.12.6",
-        "graphql-yoga": "^4.0.3",
-        "luxon": "^3.2.1",
-        "next": "13.4.7",
+        "graphql-yoga": "^4.0.4",
+        "luxon": "^3.4.2",
+        "next": "13.4.19",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-hook-form": "^7.45.1",
-        "react-overlays": "^5.2.1",
+        "react-hook-form": "^7.45.4",
         "reflect-metadata": "^0.1.13",
         "type-graphql": "^2.0.0-beta.2",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
-        "@babel/core": "^7.22.5",
+        "@babel/core": "^7.22.11",
         "@storybook/addon-actions": "^7.0.24",
         "@storybook/addon-essentials": "^7.0.24",
         "@storybook/addon-interactions": "^7.0.24",
@@ -63,22 +62,22 @@
         "@types/uuid": "^9.0.2",
         "@typescript-eslint/eslint-plugin": "^5.60.1",
         "@typescript-eslint/parser": "^5.60.1",
-        "babel-loader": "^9.1.2",
-        "eslint": "^8.43.0",
-        "eslint-config-next": "^13.4.7",
-        "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-import": "^2.27.5",
-        "eslint-plugin-prettier": "^4.2.1",
-        "eslint-plugin-storybook": "^0.6.12",
+        "babel-loader": "^9.1.3",
+        "eslint": "^8.48.0",
+        "eslint-config-next": "13.4.19",
+        "eslint-config-prettier": "^9.0.0",
+        "eslint-plugin-import": "^2.28.1",
+        "eslint-plugin-prettier": "^5.0.0",
+        "eslint-plugin-storybook": "^0.6.13",
         "jest": "^29.5.0",
         "jest-environment-jsdom": "^29.5.0",
         "jest-when": "^3.5.2",
         "json-server": "^0.17.3",
-        "prettier": "^2.8.8",
+        "prettier": "^3.0.3",
         "storybook": "^7.0.24",
-        "ts-jest": "^29.1.0",
+        "ts-jest": "^29.1.1",
         "ts-node": "^10.9.1",
-        "typescript": "^5.1.6",
-        "webpack": "^5.88.1"
+        "typescript": "^5.2.2",
+        "webpack": "^5.88.2"
     }
 }
