--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@
 *.pem
 .idea
 .vscode
+.yarn
 
 # debug
 npm-debug.log*
@@ -30,7 +31,7 @@ yarn-error.log*
 # local env files
 .env*.local
 
-#
+# graphql
 .graphql
 
 # vercel
