--- a/package.json
+++ b/package.json
@@ -1,83 +1,88 @@
 {
-    "name": "bookings-frontend",
-    "author": {
-        "name": "Jonah Grimes",
-        "username": "jmgrimes",
-        "url": "https://github.com/jmgrimes"
-    },
-    "version": "1.0.0",
-    "private": true,
-    "scripts": {
-        "build": "next build",
-        "build-storybook": "storybook build",
-        "dev": "next dev",
-        "dev-backend": "json-server --watch backend.json --port 3001",
-        "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
-        "lint": "next lint",
-        "start": "next start",
-        "start-storybook": "storybook dev -p 6006",
-        "test": "jest",
-        "test:watch": "jest --watch"
-    },
-    "dependencies": {
-        "@apollo/client": "^3.7.16",
-        "@fortawesome/fontawesome-svg-core": "^6.4.2",
-        "@fortawesome/free-regular-svg-icons": "^6.4.2",
-        "@fortawesome/free-solid-svg-icons": "^6.4.2",
-        "@fortawesome/react-fontawesome": "^0.2.0",
-        "@popperjs/core": "^2.11.8",
-        "bootstrap": "^5.3.1",
-        "class-validator": "^0.14.0",
-        "graphql": "^16.8.0",
-        "graphql-tag": "^2.12.6",
-        "graphql-yoga": "^4.0.4",
-        "luxon": "^3.4.2",
-        "next": "13.4.19",
-        "react": "^18.2.0",
-        "react-dom": "^18.2.0",
-        "react-hook-form": "^7.45.4",
-        "reflect-metadata": "^0.1.13",
-        "type-graphql": "^2.0.0-beta.2",
-        "uuid": "^9.0.0"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.22.11",
-        "@storybook/addon-actions": "^7.0.24",
-        "@storybook/addon-essentials": "^7.0.24",
-        "@storybook/addon-interactions": "^7.0.24",
-        "@storybook/addon-links": "^7.0.24",
-        "@storybook/blocks": "^7.0.24",
-        "@storybook/nextjs": "^7.0.24",
-        "@storybook/react": "^7.0.24",
-        "@testing-library/dom": "^9.3.1",
-        "@testing-library/jest-dom": "^5.16.5",
-        "@testing-library/react": "^14.0.0",
-        "@testing-library/user-event": "^14.4.3",
-        "@types/jest": "^29.5.0",
-        "@types/jest-when": "^3.5.2",
-        "@types/luxon": "^3.3.0",
-        "@types/node": "^20.3.2",
-        "@types/react": "^18.2.14",
-        "@types/react-dom": "^18.2.6",
-        "@types/uuid": "^9.0.2",
-        "@typescript-eslint/eslint-plugin": "^5.60.1",
-        "@typescript-eslint/parser": "^5.60.1",
-        "babel-loader": "^9.1.3",
-        "eslint": "^8.48.0",
-        "eslint-config-next": "13.4.19",
-        "eslint-config-prettier": "^9.0.0",
-        "eslint-plugin-import": "^2.28.1",
-        "eslint-plugin-prettier": "^5.0.0",
-        "eslint-plugin-storybook": "^0.6.13",
-        "jest": "^29.5.0",
-        "jest-environment-jsdom": "^29.5.0",
-        "jest-when": "^3.5.2",
-        "json-server": "^0.17.3",
-        "prettier": "^3.0.3",
-        "storybook": "^7.0.24",
-        "ts-jest": "^29.1.1",
-        "ts-node": "^10.9.1",
-        "typescript": "^5.2.2",
-        "webpack": "^5.88.2"
-    }
+  "name": "bookings-frontend",
+  "author": {
+    "name": "Jonah Grimes",
+    "username": "jmgrimes",
+    "url": "https://github.com/jmgrimes"
+  },
+  "version": "1.0.0",
+  "private": true,
+  "scripts": {
+    "build": "next build",
+    "build-storybook": "storybook build",
+    "dev": "next dev",
+    "dev-backend": "json-server --watch backend.json --port 3001",
+    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
+    "lint": "next lint",
+    "start": "next start",
+    "start-storybook": "storybook dev -p 6006",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "storybook": "storybook dev -p 6006"
+  },
+  "dependencies": {
+    "@apollo/client": "^3.7.16",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@popperjs/core": "^2.11.8",
+    "bootstrap": "^5.3.1",
+    "class-validator": "^0.14.0",
+    "graphql": "^16.8.0",
+    "graphql-scalars": "^1.22.2",
+    "graphql-tag": "^2.12.6",
+    "graphql-yoga": "^4.0.4",
+    "luxon": "^3.4.2",
+    "next": "13.4.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.4",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^2.0.0-beta.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.22.11",
+    "@storybook/addon-actions": "^7.4.0",
+    "@storybook/addon-essentials": "^7.4.0",
+    "@storybook/addon-interactions": "^7.4.0",
+    "@storybook/addon-links": "^7.4.0",
+    "@storybook/addon-onboarding": "^1.0.8",
+    "@storybook/blocks": "^7.4.0",
+    "@storybook/nextjs": "^7.4.0",
+    "@storybook/react": "^7.4.0",
+    "@storybook/testing-library": "^0.2.0",
+    "@testing-library/dom": "^9.3.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.0",
+    "@types/jest-when": "^3.5.2",
+    "@types/luxon": "^3.3.0",
+    "@types/node": "^20.3.2",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "@types/uuid": "^9.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.60.1",
+    "@typescript-eslint/parser": "^5.60.1",
+    "babel-loader": "^9.1.3",
+    "eslint": "^8.48.0",
+    "eslint-config-next": "13.4.19",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-storybook": "^0.6.13",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "jest-when": "^3.5.2",
+    "json-server": "^0.17.3",
+    "prettier": "^3.0.3",
+    "storybook": "^7.4.0",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.2.2",
+    "webpack": "^5.88.2"
+  },
+  "packageManager": "yarn@3.6.3"
 }
