--- a/package.json
+++ b/package.json
@@ -8,38 +8,29 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "next build",
-    "build-storybook": "storybook build",
-    "dev": "next dev",
-    "dev-backend": "json-server --watch backend.json --port 3001",
-    "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
+    "app:build": "next build",
+    "app:dev": "next dev",
+    "app:dev-backend": "json-server --watch backend.json --port 3001",
+    "app:start": "next start",
+    "fmt": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
     "lint": "next lint",
-    "start": "next start",
-    "start-storybook": "storybook dev -p 6006",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "storybook": "storybook dev -p 6006"
+    "storybook:build": "storybook build",
+    "storybook:start": "storybook dev -p 6006",
+    "test:ci": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.16",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-regular-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.1",
-    "class-validator": "^0.14.0",
-    "graphql": "^16.8.0",
-    "graphql-scalars": "^1.22.2",
-    "graphql-tag": "^2.12.6",
-    "graphql-yoga": "^4.0.4",
     "luxon": "^3.4.2",
     "next": "13.4.19",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "^2.0.0-beta.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
