--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "app:dev": "next dev",
     "app:dev-backend": "json-server --watch backend.json --port 3001",
     "app:start": "next start",
-    "fmt": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
-    "lint": "next lint",
+    "src:format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,css,scss,md,mdx}\"",
+    "src:lint": "next lint",
     "storybook:build": "storybook build",
     "storybook:start": "storybook dev -p 6006",
     "test:ci": "jest",
@@ -34,7 +34,6 @@
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.11",
     "@storybook/addon-actions": "^7.4.0",
     "@storybook/addon-essentials": "^7.4.0",
     "@storybook/addon-interactions": "^7.4.0",
@@ -57,7 +56,6 @@
     "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.60.1",
     "@typescript-eslint/parser": "^5.60.1",
-    "babel-loader": "^9.1.3",
     "eslint": "^8.48.0",
     "eslint-config-next": "13.4.19",
     "eslint-config-prettier": "^9.0.0",
@@ -72,7 +70,6 @@
     "storybook": "^7.4.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "webpack": "^5.88.2"
+    "typescript": "^5.2.2"
   }
 }
