--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "jest-when": "^3.5.2",
     "json-server": "^0.17.3",
     "prettier": "^3.0.3",
+    "sass": "^1.66.1",
     "storybook": "^7.4.0",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
